--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -157,8 +157,13 @@
 									</a>
 								</li>
 								<li class="nav-item">
-									<a href="404.html" class="nav-link">
+									<a href="{{ path('app_favorite_show') }}" class="nav-link">
 										Recette Favorie
+									</a>
+								</li>
+								<li class="nav-item">
+									<a href="{{ path('app_analyzer') }}" class="nav-link">
+										Analyser votre recette
 									</a>
 								</li>
 								<li class="nav-item">
