--- a/templates/recettes/showAdmin.html.twig
+++ b/templates/recettes/showAdmin.html.twig
@@ -57,9 +57,9 @@
 										<div class="blog-caption">
 										
                                               <img src="{{ recette.imgsrc }}" alt="Images">
-              <div>
+                                            <div>
               
-                 </div>
+                                                  </div>
 											<p>
                                                 Calorie  : {{ recette.calorie }}
 												Proteins : {{ recette.protein }}
@@ -82,6 +82,19 @@
                                                  {% endfor %}
                                               </ul>
 										</div>
+										<div>
+    <form action="{{ path('app_recettes_delete_admin', {'idR': recette.idR}) }}" method="post">
+        <input type="hidden" name="_method" value="DELETE">
+        <button class="btn btn-danger" id="reset-settings">Delete</button>
+    </form>
+    
+    <a href="{{ path('app_recettes_edit', {'idR': recette.idR}) }}" class="btn btn-warning">Modifier</a>
+</div>
+
+
+
+
+
 									</div>
 								</div>
 								<div class="col-md-4 col-sm-12">
