--- a/templates/user/ChefHome.html.twig
+++ b/templates/user/ChefHome.html.twig
@@ -2,5 +2,7 @@
 
 {% block body %}
    <h3>bienvenue chef</h3>
-   <a href="{{ path('app_user_edit', {'idu': app.user.id}) }}">Edit Profile</a>
+   <a href="{{ path('app_user_edit', {'idu': app.user.getIdu()}) }}">Edit Profile</a>
+  <a href="{{ path('sendEmail') }}">Envoyer un e-mail de test</a>
+
 {% endblock %}
