--- a/templates/article_admin/postList.html.twig
+++ b/templates/article_admin/postList.html.twig
@@ -8,24 +8,19 @@
 						<tr>
 							<th scope="col">#</th>
 							<th scope="col">
-								<div class="btn-group">
-									<button type="button" class="btn btn-danger">Action</button>
-									<button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-										<span class="visually-hidden">Toggle Dropdown</span>
+								<div class="dropdown">
+									<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+										Title Article
 									</button>
-									<ul class="dropdown-menu">
+									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
 										<li>
-											<a class="dropdown-item" href="#">Action</a>
+											<a class="dropdown-item sort-option" href="#" data-sort-type="asc">Sort Alphabetically ASC</a>
 										</li>
 										<li>
-											<a class="dropdown-item" href="#">Another action</a>
+											<a class="dropdown-item sort-option" href="#" data-sort-type="desc">Sort Alphabetically DESC</a>
 										</li>
 										<li>
-											<a class="dropdown-item" href="#">Something else here</a>
-										</li>
-										<li><hr class="dropdown-divider"></li>
-										<li>
-											<a class="dropdown-item" href="#">Separated link</a>
+											<a class="dropdown-item" href="#">Hide Column</a>
 										</li>
 									</ul>
 								</div>
@@ -63,5 +58,6 @@
 {% endblock %}
 {% block js %}
 	<script src={{asset("https://cdn.jsdelivr.net/npm/sweetalert2@11")}}></script>
-	<script src={{asset("backend/vendors/scripts/blog_js.js")}}></script>
+	<script src={{asset("backend/src/scripts/blog_js.js")}}></script>
+	<script src={{asset("backend/src/scripts/popper.min.js")}}></script>
 {% endblock %}
