--- a/templates/defis/_form.html.twig
+++ b/templates/defis/_form.html.twig
@@ -1,23 +1,19 @@
 
 
-
-
 {% block body %}
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card rounded shadow-lg">
-            
                 <div class="card-body">
-                    
-
                     {{ form_start(form , {'attr': {'novalidate':'novalidate', 'autocomplete': 'off'}}) }}
+                    
                     <div class="mb-3">
                         {{ form_label(form.nomD ,"Nom de défi")}}
                         {{ form_widget(form.nomD, {'attr': {'class': 'form-control'}}) }}
-                         {% if form_errors(form.nomD) is not empty %}
+                        {% if form_errors(form.nomD) is not empty %}
                             <div class="alert alert-danger" role="alert">
-                             {{ form_errors(form.nomD) }}
+                                {{ form_errors(form.nomD) }}
                             </div>
                         {% endif %}
                     </div>
@@ -25,42 +21,49 @@
                     <div class="mb-3">
                         {{ form_label(form.photoD,"Photo de défi") }}
                         {{ form_widget(form.photoD, {'attr': {'class': 'form-control'}}) }}
-                         {% if form_errors(form.photoD) is not empty %}
-        <div class="alert alert-danger" role="alert">
-            {{ form_errors(form.photoD) }}
-        </div>
-    {% endif %}
+                        {% if form_errors(form.photoD) is not empty %}
+                            <div class="alert alert-danger" role="alert">
+                                {{ form_errors(form.photoD) }}
+                            </div>
+                        {% endif %}
                     </div>
 
                     <div class="mb-3">
                         {{ form_label(form.disD,"Discription") }}
                         {{ form_widget(form.disD, {'attr': {'class': 'form-control'}}) }}
                         {% if form_errors(form.disD) is not empty %}
-        <div class="alert alert-danger" role="alert">
-            {{ form_errors(form.disD) }}
-        </div>
-    {% endif %}
+                            <div class="alert alert-danger" role="alert">
+                                {{ form_errors(form.disD) }}
+                            </div>
+                        {% endif %}
                     </div>
 
                     <div class="mb-3">
                         {{ form_label(form.delai,"Date de défi") }}
                         {{ form_widget(form.delai, {'attr': {'class': 'form-control'}}) }}
-                       {% if form_errors(form.delai) is not empty %}
-        <div class="alert alert-danger" role="alert">
-            {{ form_errors(form.delai) }}
-        </div>
-    {% endif %}
+                        {% if form_errors(form.delai) is not empty %}
+                            <div class="alert alert-danger" role="alert">
+                                {{ form_errors(form.delai) }}
+                            </div>
+                        {% endif %}
                     </div>
 
                     <div class="mb-3">
                         {{ form_label(form.heure,"Heure") }}
                         {{ form_widget(form.heure, {'attr': {'class': 'form-control'}}) }}
                         {% if form_errors(form.heure) is not empty %}
-        <div class="alert alert-danger" role="alert">
-            {{ form_errors(form.heure) }}
-        </div>
-    {% endif %}
+                            <div class="alert alert-danger" role="alert">
+                                {{ form_errors(form.heure) }}
+                            </div>
+                        {% endif %}
                     </div>
+                    
+                  <div class="col-lg-12">
+						{% set userId = app.user.getIdU() %}
+						{{ form_widget(form.user, {'attr': {'class': 'form-control'}, 'value': userId }) }}
+					</div>
+                    
+                    
                     <div class="text-center">
                         <button class="btn btn-primary" style="background-color: #72ae44; color: white; border-color: #72ae44; border-radius: 30px;">{{ button_label|default('Save') }}</button>
                     </div>
