--- a/templates/participant_admin/index.html.twig
+++ b/templates/participant_admin/index.html.twig
@@ -40,4 +40,7 @@
         </div>
     </div>
 </div>
+<div class="text-center">
+    <a href="{{ path('app_participant_Stat_admin') }}" class="btn btn-success"  style="background-color: #0e1125; color: white; border-color: #0e1125 ">Statistique</a>
+</div>
 {% endblock %}
