--- a/templates/adminBase.html.twig
+++ b/templates/adminBase.html.twig
@@ -350,6 +350,19 @@
 						<span class="mtext">Ajouter un administrateur</span>
 					</a>
 				</li>
+				<li class="dropdown">
+							<a href="javascript:;" class="dropdown-toggle">
+								<span class="micon bi bi-receipt-cutoff"></span>
+								<span class="mtext">Recettes</span>
+							</a>
+							<ul class="submenu">
+	 
+								<li><a href="{{ path('app_recettes_new_admin') }}">Ajouter une recette</a></li>
+								<li><a href="{{ path('app_ingredient_index') }}">Liste des ingredients</a></li>
+								<li><a href="{{ path('admin_recipes_and_activity_charts') }}">Consulter statistiques</a></li>
+							
+							</ul>
+						</li>
 				<li>
 					<a class="dropdown-toggle no-arrow" href="{{ path('app_user_index') }}">
 						<span class="micon bi bi-file-earmark-text"></span>
