--- a/templates/adminBase.html.twig
+++ b/templates/adminBase.html.twig
@@ -463,13 +463,13 @@
 								<span class="micon bi bi-receipt-cutoff"></span>
 								<span class="mtext">Recettes</span>
 							</a>
+							<ul class="submenu">
+	 
+								<li><a href="{{ path('app_recettes_new_admin') }}">Ajouter une recette</a></li>
+								<li><a href="{{ path('app_ingredient_index') }}">Liste des ingredients</a></li>
+								<li><a href="{{ path('admin_recipes_and_activity_charts') }}">Consulter statistiques</a></li>
 							
-						</li>
-						<li>
-							<a class="dropdown-toggle no-arrow">
-								<span class="micon bi bi-file-earmark-text"></span
-								>
-							</a>
+							</ul>
 						</li>
 						
 						
