--- a/templates/adminBase.html.twig
+++ b/templates/adminBase.html.twig
@@ -25,13 +25,12 @@
 			<link rel="stylesheet" href={{asset("backend/https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap")}}>
 			<link rel="stylesheet" href={{asset("backend/src/plugins/datatables/css/responsive.bootstrap4.min.css")}}>
 			<link rel="stylesheet" href={{asset("backend/vendors/styles/style.css")}}>
-
 			<link rel="stylesheet" href={{asset("backend/https://www.googletagmanager.com/gtag/js?id=G-GBZ3SGGX85")}}>
 			<link rel="stylesheet" href={{asset("backend/https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2973766580778258")}}>
-
+			
 		{% endblock %}
-		{% block js %}
-
+{% block js %}
+			
 
 			<script src={{asset("backend/vendors/scripts/core.js")}}></script>
 			<script src={{asset("backend/vendors/scripts/script.min.js")}}></script>
@@ -53,54 +52,203 @@
 
 		</head>
 	</html>
-</body>{% endblock %}</head><body>{% block header %}
-<div class="header">
-	<div class="header-left">
-		<div class="menu-icon bi bi-list"></div>
-		<div class="search-toggle-icon bi bi-search" data-toggle="header_search"></div>
-		<div class="header-search">
-			<form>
-				<div class="form-group mb-0">
-					<i class="dw dw-search2 search-icon"></i>
-					<input type="text" class="form-control search-input" placeholder="Search Here"/>
+</body>{% endblock %}
+    </head>
+    <body>
+    {% block header %}
+    <div class="header">
+			<div class="header-left">
+				<div class="menu-icon bi bi-list"></div>
+				<div
+					class="search-toggle-icon bi bi-search"
+					data-toggle="header_search"
+				></div>
+				<div class="header-search">
+					<form>
+						<div class="form-group mb-0">
+							<i class="dw dw-search2 search-icon"></i>
+							<input
+								type="text"
+								class="form-control search-input"
+								placeholder="Search Here"
+							/>
+							<div class="dropdown">
+								<a
+									class="dropdown-toggle no-arrow"
+									href="#"
+									role="button"
+									data-toggle="dropdown"
+								>
+									<i class="ion-arrow-down-c"></i>
+								</a>
+								<div class="dropdown-menu dropdown-menu-right">
+									<div class="form-group row">
+										<label class="col-sm-12 col-md-2 col-form-label"
+											>From</label
+										>
+										<div class="col-sm-12 col-md-10">
+											<input
+												class="form-control form-control-sm form-control-line"
+												type="text"
+											/>
+										</div>
+									</div>
+									<div class="form-group row">
+										<label class="col-sm-12 col-md-2 col-form-label">To</label>
+										<div class="col-sm-12 col-md-10">
+											<input
+												class="form-control form-control-sm form-control-line"
+												type="text"
+											/>
+										</div>
+									</div>
+									<div class="form-group row">
+										<label class="col-sm-12 col-md-2 col-form-label"
+											>Subject</label
+										>
+										<div class="col-sm-12 col-md-10">
+											<input
+												class="form-control form-control-sm form-control-line"
+												type="text"
+											/>
+										</div>
+									</div>
+									<div class="text-right">
+										<button class="btn btn-primary">Search</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+			<div class="header-right">
+				<div class="dashboard-setting user-notification">
 					<div class="dropdown">
-						<a class="dropdown-toggle no-arrow" href="#" role="button" data-toggle="dropdown">
-							<i class="ion-arrow-down-c"></i>
+						<a
+							class="dropdown-toggle no-arrow"
+							href="javascript:;"
+							data-toggle="right-sidebar"
+						>
+							<i class="dw dw-settings2"></i>
+						</a>
+					</div>
+				</div>
+				<div class="user-notification">
+					<div class="dropdown">
+						<a
+							class="dropdown-toggle no-arrow"
+							href="#"
+							role="button"
+							data-toggle="dropdown"
+						>
+							<i class="icon-copy dw dw-notification"></i>
+							<span class="badge notification-active"></span>
 						</a>
 						<div class="dropdown-menu dropdown-menu-right">
-							<div class="form-group row">
-								<label class="col-sm-12 col-md-2 col-form-label">From</label>
-								<div class="col-sm-12 col-md-10">
-									<input class="form-control form-control-sm form-control-line" type="text"/>
-								</div>
-							</div>
-							<div class="form-group row">
-								<label class="col-sm-12 col-md-2 col-form-label">To</label>
-								<div class="col-sm-12 col-md-10">
-									<input class="form-control form-control-sm form-control-line" type="text"/>
-								</div>
-							</div>
-							<div class="form-group row">
-								<label class="col-sm-12 col-md-2 col-form-label">Subject</label>
-								<div class="col-sm-12 col-md-10">
-									<input class="form-control form-control-sm form-control-line" type="text"/>
-								</div>
-							</div>
-							<div class="text-right">
-								<button class="btn btn-primary">Search</button>
+							<div class="notification-list mx-h-350 customscroll">
+								<ul>
+									<li>
+										<a href="#">
+											<img src="vendors/images/img.jpg" alt="" />
+											<h3>John Doe</h3>
+											<p>
+												Lorem ipsum dolor sit amet, consectetur adipisicing
+												elit, sed...
+											</p>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<img src="vendors/images/photo1.jpg" alt="" />
+											<h3>Lea R. Frith</h3>
+											<p>
+												Lorem ipsum dolor sit amet, consectetur adipisicing
+												elit, sed...
+											</p>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<img src="vendors/images/photo2.jpg" alt="" />
+											<h3>Erik L. Richards</h3>
+											<p>
+												Lorem ipsum dolor sit amet, consectetur adipisicing
+												elit, sed...
+											</p>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<img src="vendors/images/photo3.jpg" alt="" />
+											<h3>John Doe</h3>
+											<p>
+												Lorem ipsum dolor sit amet, consectetur adipisicing
+												elit, sed...
+											</p>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<img src="vendors/images/photo4.jpg" alt="" />
+											<h3>Renee I. Hansen</h3>
+											<p>
+												Lorem ipsum dolor sit amet, consectetur adipisicing
+												elit, sed...
+											</p>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<img src="vendors/images/img.jpg" alt="" />
+											<h3>Vicki M. Coleman</h3>
+											<p>
+												Lorem ipsum dolor sit amet, consectetur adipisicing
+												elit, sed...
+											</p>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</div>
 					</div>
 				</div>
-			</form>
-		</div>
-	</div>
-	<div class="header-right">
-		<div class="dashboard-setting user-notification">
-			<div class="dropdown">
-				<a class="dropdown-toggle no-arrow" href="javascript:;" data-toggle="right-sidebar">
-					<i class="dw dw-settings2"></i>
-				</a>
+				<div class="user-info-dropdown">
+					<div class="dropdown">
+						<a
+							class="dropdown-toggle"
+							href="#"
+							role="button"
+							data-toggle="dropdown"
+						>
+							<span class="user-icon">
+								<img src="{{ app.user.image }}" alt="">
+							</span>
+							<span class="user-name">{{ app.user.username }}</span>
+						</a>
+						<div
+							class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list"
+						>
+							<a class="dropdown-item" href="profile.html"
+								><i class="dw dw-user1"></i> Profile</a
+							>
+							<a class="dropdown-item" href="profile.html"
+								><i class="dw dw-settings2"></i> Setting</a
+							>
+							<a class="dropdown-item" href="faq.html"
+								><i class="dw dw-help"></i> Help</a
+							>
+							<a class="dropdown-item" href="{{ path('app_logout') }}"
+								><i class="dw dw-logout"></i> Log Out</a
+							>
+						</div>
+					</div>
+				</div>
+				<div class="github-link">
+					<a href="https://github.com/dropways/deskapp" target="_blank"
+						><img src="vendors/images/github.svg" alt=""
+					/></a>
+				</div>
 			</div>
 		</div>
 		<div class="user-notification">
@@ -283,23 +431,14 @@
 							<a href="form-basic.html">Form Basic</a>
 						</li>
 						<li>
-							<a href="advanced-components.html">Advanced Components</a>
+							<a class="dropdown-toggle no-arrow">
+								<span class="micon bi bi-file-earmark-text"></span
+								><span class="mtext" href="{{ path('app_user_index') }}">liste des utilisateurs</span>
+							</a>
 						</li>
-						<li>
-							<a href="form-wizard.html">Form Wizard</a>
-						</li>
-						<li>
-							<a href="html5-editor.html">HTML5 Editor</a>
-						</li>
-						<li>
-							<a href="form-pickers.html">Form Pickers</a>
-						</li>
-						<li>
-							<a href="image-cropper.html">Image Cropper</a>
-						</li>
-						<li>
-							<a href="image-dropzone.html">Image Dropzone</a>
-						</li>
+						
+						
+						
 					</ul>
 				</li>
 
@@ -319,5 +458,7 @@
 
 			</ul>
 		</div>
-	</div>
-</div>{% endblock %}</body></html>
+        {% endblock %}
+
+    </body>
+</html>
