--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -13,35 +14,40 @@
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
 		{% block css %}
-			<link rel="stylesheet" href={{asset("assets/css/blogStylesheet.min.css")}}>
-			<link rel="stylesheet" href={{asset("assets/css/bootstrap.min.css")}}>
-			<link rel="stylesheet" href={{asset("assets/css/animate.min.css")}}>
-			<link rel="stylesheet" href={{asset("assets/fonts/flaticon.css")}}>
-			<link rel="stylesheet" href={{asset("assets/css/boxicons.min.css")}}>
-			<link rel="stylesheet" href={{asset("assets/css/owl.carousel.min.css")}}>
-			<link rel="stylesheet" href={{asset("assets/css/owl.theme.default.min.css")}}>
-			<link rel="stylesheet" href={{asset("assets/css/jquery-ui.min.css")}}>
-			<link rel="stylesheet" href={{asset("assets/css/magnific-popup.min.css")}}>
-			<link rel="stylesheet" href={{asset("assets/css/odometer.min.css")}}>
-			<link rel="stylesheet" href={{asset("assets/css/meanmenu.min.css")}}>
-			<link rel="stylesheet" href={{asset("assets/css/style.css")}}>
-			<link rel="stylesheet" href={{asset("assets/css/responsive.css")}}>
-			<link rel="stylesheet" href={{asset("assets/css/theme-dark.css")}}>
+			<link rel="stylesheet" href={{asset("frontend/assets/css/blogStylesheet.min.css")}}>
+			<link rel="stylesheet" href={{asset("frontend/assets/css/bootstrap.min.css")}}>
+			<link rel="stylesheet" href={{asset("frontend/assets/css/animate.min.css")}}>
+			<link rel="stylesheet" href={{asset("frontend/assets/fonts/flaticon.css")}}>
+			<link rel="stylesheet" href={{asset("frontend/assets/css/boxicons.min.css")}}>
+			<link rel="stylesheet" href={{asset("frontend/assets/css/owl.carousel.min.css")}}>
+			<link rel="stylesheet" href={{asset("frontend/assets/css/owl.theme.default.min.css")}}>
+			<link rel="stylesheet" href={{asset("frontend/assets/css/jquery-ui.min.css")}}>
+			<link rel="stylesheet" href={{asset("frontend/assets/css/magnific-popup.min.css")}}>
+			<link rel="stylesheet" href={{asset("frontend/assets/css/odometer.min.css")}}>
+			<link rel="stylesheet" href={{asset("frontend/assets/css/meanmenu.min.css")}}>
+			<link rel="stylesheet" href={{asset("frontend/assets/css/style.css")}}>
+			<link rel="stylesheet" href={{asset("frontend/assets/css/responsive.css")}}>
+			<link rel="stylesheet" href={{asset("frontend/assets/css/theme-dark.css")}}>
+			 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 		{% endblock %}
 		{% block js %}
-			<script src="assets/js/jquery.min.js"></script>
-			<script src={{asset("assets/js/bootstrap.bundle.min.js")}}></script>
-			<script src={{asset("assets/js/magnific-popup.min.js")}}></script>
-			<script src={{asset("assets/js/odometer.min.js")}}></script>
-			<script src={{asset("assets/js/appear.min.js")}}></script>
-			<script src={{asset("assets/js/meanmenu.min.js")}}></script>
-			<script src={{asset("assets/js/owl.carousel.min.js")}}></script>
-			<script src={{asset("assets/js/wow.min.js")}}></script>
-			<script src={{asset("assets/js/jquery-ui.min.js")}}></script>
-			<script src={{asset("assets/js/ajaxchimp.min.js")}}></script>
-			<script src={{asset("assets/js/form-validator.min.js")}}></script>
-			<script src={{asset("assets/js/contact-form-script.js")}}></script>
-			<script src={{asset("assets/js/custom.js")}}></script>
+		 <!-- Inclure Leaflet.js -->
+   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="frontend/assets/js/jquery.min.js"></script> <!-- Inclure jQuery en premier -->
+
+    <!-- Ensuite, inclure les autres scripts -->
+    <script src={{asset("frontend/assets/js/bootstrap.bundle.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/magnific-popup.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/odometer.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/appear.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/meanmenu.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/owl.carousel.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/wow.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/jquery-ui.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/ajaxchimp.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/form-validator.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/contact-form-script.js")}}></script>
+    <script src={{asset("frontend/assets/js/custom.js")}}></script>
 		</head>
 	</html>
 </body>{% endblock %}</head><body>{% block header %}
@@ -50,7 +56,7 @@
 		<div class="row align-items-center">
 			<div class="col-lg-3 col-md-4">
 				<div class="header-left">
-					<p>Welcome To Arrola Health!</p>
+					<p>Welcome To Yumlink!</p>
 				</div>
 			</div>
 			<div class="col-lg-9 col-md-8">
@@ -81,7 +87,7 @@
 						</ul>
 					</div>
 					<div class="header-item">
-						<a href="cart.html" class="cart-top-btn">
+						<a  class="cart-top-btn">
 							<i class="bx bx-shopping-bag"></i>
 							<span>0</span>
 						</a>
@@ -156,7 +162,7 @@
 									</a>
 								</li>
 								<li class="nav-item">
-									<a href="coming-soon.html" class="nav-link">
+									<a href="{{ path('app_chef') }}"  class="nav-link">
 										Nos Chefs
 									</a>
 								</li>
@@ -243,11 +249,7 @@
 								</li>
 							</ul>
 						</li>
-						<li class="nav-item">
-							<a href="contact.html" class="nav-link">
-								Contact Us
-							</a>
-						</li>
+						
 					</ul>
 					<div class="others-options d-flex align-items-center">
 						<div class="optional-item">
@@ -258,7 +260,7 @@
 							</div>
 						</div>
 						<div class="optional-item">
-							<a href="login.html" class="default-btn two">Log in</a>
+							<a href="{{ path('app_logout') }}" class="default-btn two">Log out </a>
 						</div>
 					</div>
 					<div class="mobile-nav">
@@ -378,7 +380,7 @@
 		<div class="footer-widget ps-5">
 			<h3>Newsletter</h3>
 			<p>Hello</p>
-			<div class="newsletter-area">
+			<!--<div class="newsletter-area">
 				<form class="newsletter-form" data-toggle="validator" method="POST">
 					<input type="email" class="form-control" placeholder="Enter Your Email" name="EMAIL" required autocomplete="off">
 					<button class="subscribe-btn" type="submit">
@@ -386,7 +388,7 @@
 					</button>
 					<div id="validator-newsletter" class="form-result"></div>
 				</form>
-			</div>
+			</div>-->
 		</div>
 	</div>
 </div></div></div><div class="copyright-area"><div class="container">
