--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -39,7 +39,7 @@
 									<tbody>
 										{% set subtotal = 0 %}
 										{% for panier in paniers %}
-											{% if panier.idClient == 3 %}
+											{% if panier.idClient ==  app.user.getIdu()  %}
 												<tr>
 													<td class="product-thumbnail">
 														<a href="cart.html">
@@ -62,6 +62,7 @@
 														{% set subtotal = subtotal + (panier.prixtotal * panier.quantite) %}
 														<form method="post" action="{{ path('app_panier_delete', {'idp': panier.idp}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
 															<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ panier.idp) }}">
+																<input type="hidden" name="id_client" value="{{ User.app.getIda() }}">
 															<button type="submit" class="remove" style="border: none; background: none; cursor: pointer;">
 																<i class="bx bx-x-circle"></i>
 															</button>
@@ -84,6 +85,7 @@
 										<div class="continue-shopping-box">
 											<form method="post" action="{{ path('panier_delete_all') }}" onsubmit="return confirm('Are you sure you want to delete all items in the panier?');">
     <input type="hidden" name="_token" value="{{ csrf_token('panier_delete_all') }}">
+	<input type="hidden" name="id_client" value="{{ app.user.getIdu() }}">
     <button type="submit" class="default-btn">
         Delete all panier
     </button>
