--- a/templates/reclamation/index.html.twig
+++ b/templates/reclamation/index.html.twig
@@ -1,39 +1,150 @@
-{% extends 'base.html.twig' %}
+{% extends 'adminbase.html.twig' %}
 
-{% block title %}Reclamation index{% endblock %}
+{% block title %}Reclamation index
+{% endblock %}
 
 {% block body %}
-    <h1>Reclamation index</h1>
+	<div class="main-container">
+		<div class="pd-ltr-20 xs-pd-20-10">
+			<div class="min-height-200px">
+				<div class="page-header">
+					<div class="row">
+						<div class="col-md-12 col-sm-12">
+							<div class="title">
+								<h4>Product</h4>
+							</div>
+							<nav aria-label="breadcrumb" role="navigation">
+								<ol class="breadcrumb">
+									<li class="breadcrumb-item">
+										<a href="index.html">Home</a>
+									</li>
+									<li class="breadcrumb-item active" aria-current="page">
+										Produit
+									</li>
+								</ol>
+							</nav>
+						</div>
+					</div>
+					<div class="row">
+						<div class="header-left">
+							<div class="header-search">
+								<form action="{{ path('app_oeuvre_index_ss') }}" method="get">
+									<div class="form-group mb-0">
+										<i class="dw dw-search2 search-icon"></i>
+										<input type="text" class="form-control search-input" name="q" value="{{ searchTerm ?? '' }}" placeholder="Search Here"/>
+										<input type="submit" style="display: none;">
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="card-box mb-30">
+					<div class="pd-20">
+						<h4 class="text-blue h4">Data Table Simple</h4>
+						<p class="mb-0">
+							you can find more options
+							<a class="text-primary" href="https://datatables.net/" target="_blank">Click Here</a>
+						</p>
+					</div>
+					<div class="pb-20">
+						<table class="data-table table stripe hover nowrap">
+							<thead>
+								<tr>
+									<th class="table-plus datatable-nosort">Idr</th>
+									<th>Nomuser</th>
+									<th>Iduser</th>
+									<th>Comentair</th>
+									<th class="datatable-nosort">Action</th>
+								</tr>
+							</thead>
+							<tbody>
+								{% for reclamation in reclamations %}
+									<tr>
+										<td>{{ reclamation.idr }}</td>
+										<td>{{ reclamation.nomuser }}</td>
+										<td>{{ reclamation.iduser }}</td>
+										<td>{{ reclamation.comentair }}</td>
+										<td></td>
+										<td>
+											<div class="dropdown">
+												<a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle" href="#" role="button" data-toggle="dropdown">
+													<i class="dw dw-more"></i>
+												</a>
+												<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
+													<a class="dropdown-item" href="#" data-toggle="modal" data-target="#respondModal_{{ reclamation.idr  }}">
+														<i class="dw dw-edit2"></i>
+														Reprendre
+													</a>
+													<form id="deleteForm_{{ reclamation.idr }}" method="post" action="{{ path('app_reclamation_delete', {'idr': reclamation.idr}) }}">
+														<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ reclamation.idr) }}">
+														<a href="#" class="dropdown-item" onclick="confirmAndSubmit(event, '{{ reclamation.idr }}')">
+															<i class="dw dw-delete-3"></i>
+															Delete
+														</a>
+													</form>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Idr</th>
-                <th>Nomuser</th>
-                <th>Iduser</th>
-                <th>Comentair</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for reclamation in reclamations %}
-            <tr>
-                <td>{{ reclamation.idr }}</td>
-                <td>{{ reclamation.nomuser }}</td>
-                <td>{{ reclamation.iduser }}</td>
-                <td>{{ reclamation.comentair }}</td>
-                <td>
-                    <a href="{{ path('app_reclamation_show', {'idr': reclamation.idr}) }}">show</a>
-                    <a href="{{ path('app_reclamation_edit', {'idr': reclamation.idr}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
 
-    <a href="{{ path('app_reclamation_new') }}">Create new</a>
-{% endblock %}
+												</div>
+											</div>
+										</td>
+									</tr>
+									<div class="modal fade" id="respondModal_{{ reclamation.idr }}" tabindex="-1" role="dialog" aria-labelledby="respondModalLabel" aria-hidden="true">
+										<div class="modal-dialog" role="document">
+											<div class="modal-content">
+												<div class="modal-header">
+													<h5 class="modal-title" id="respondModalLabel">Repondre à la réclamation</h5>
+													<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+														<span aria-hidden="true">&times;</span>
+													</button>
+												</div>
+												<div
+													class="modal-body">
+													<!-- Form for responding to the Reclamation -->
+													<form action="{{ path('app_reprandre_respond') }}" method="POST">
+														<input type="hidden" name="_token" value="{{ reclamation.idr }}">
+														
+														<div class="form-group">
+															<label for="response">Votre réponse:</label>
+															<textarea name="response" id="response_{{ reclamation.idr }}" class="form-control" rows="3"></textarea>
+														</div>
+														<button type="submit" class="btn btn-primary">Envoyer</button>
+													</form>
+												</div>
+											</div>
+										</div>
+									</div>
+                                    {# Loop through each reclamation #}
+
+
+
+								{% else %}
+									<tr>
+										<td colspan="4">no records found</td>
+									</tr>
+								{% endfor %}
+							</tbody>
+						</tbody>
+					</table>
+				</ul>
+
+			</div>
+			<div class="blog-pagination mb-30">
+				<div class="btn-toolbar justify-content-center mb-15">
+					<div
+						class="btn-group"><!-- Pagination buttons -->
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<script>
+	function confirmAndSubmit(event, id) {
+event.preventDefault();
+if (confirm('Are you sure you want to delete this item?')) {
+document.getElementById('deleteForm_' + id).submit();
+}
+}
+</script>{% endblock %}
