last bundel and metier

--- a/templates/adminBase.html.twig
+++ b/templates/adminBase.html.twig
@@ -339,8 +339,10 @@
 							<ul class="submenu">
 								<li><a href="{{ path('app_produit_indexadmin') }}">List Produit</a></li>
 								<li><a href="{{ path('app_commande_index') }}">List Commande</a></li>
+								<li><a href="{{ path('app_reclamation_indexadmin') }}">List Reclamation</a></li>
 								<li><a href="{{ path('app_panier_indexadmin') }}">List Panier</a></li>
 								<li><a href="{{ path('app_produit_new') }}">Add Produit</a></li>
+								<li><a href="{{ path('statistiques') }}">statistiques</a></li>
 								
 							</ul>
 						</li>
