--- a/templates/user_nutrition/chat.html.twig
+++ b/templates/user_nutrition/chat.html.twig
@@ -3,6 +3,21 @@
 {% block title %}Chat{% endblock %}
 
 {% block body %}
+
+<section class="inner-banner inner-bg6">
+        <div class="container">
+            <div class="inner-title text-center">
+                <h3> Your ChatBot</h3>
+                <ul>
+                    <li>
+                        <a href="{{ path('app_user_nutrition_index') }}">Dashboard</a>
+                    </li>
+                    <li>Chat</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
