--- a/templates/defis_admin/calendar.html.twig
+++ b/templates/defis_admin/calendar.html.twig
@@ -28,7 +28,7 @@
                 end: 'dayGridMonth,timeGridWeek'
             },
             events: {{ events | raw }}, 
-            editable: true,
+           // editable: true,
             eventResizableFromStart: true,
             eventClick: function(info) { 
                 console.log(info.event.extendedProps); 
