--- a/templates/test/index.html.twig
+++ b/templates/test/index.html.twig
@@ -1,4 +1,8 @@
-{% extends 'adminBase.html.twig' %}
+{% extends 'base.html.twig' %}
 {% block body %}
+
+
+<h2>{{ articles }}</h2>
+
 <h1>hello</h1>
 {% endblock %}
