--- a/templates/security/user/login.html.twig
+++ b/templates/security/user/login.html.twig
@@ -50,7 +50,7 @@
 <div class="agree-label">
 <input type="checkbox" id="chb1">
 <label for="chb1">
-Remember Me <a class="forget" href="{{ path('app_login') }}">Forgot My Password?</a>
+Remember Me <a class="forget" href="{{ path('app_forgot_password_request') }}">Forgot My Password?</a>
 </label>
 </div>
 </div>
@@ -76,4 +76,5 @@ Not a member?
         </div>
     </div>
 </div>
+
 {% endblock %}
