--- a/templates/adresse/new.html.twig
+++ b/templates/adresse/new.html.twig
@@ -92,4 +92,12 @@ console.error('Erreur lors de la récupération de l\'adresse:', error);
 L.marker([latitude, longitude]).addTo(map);
 });
 			</script>
+			<script>
+    var recaptchaCallback_form_captcha = function() {
+        grecaptcha.execute('6Lc-DcopAAAAAAHuUCuML8O8pAiVl-d2U4O6UKC1', {action: 'Adresse'}).then(function(token) {
+            document.getElementById('form_captcha').value = token;
+        });
+    };
+</script>
+<script src="https://www.google.com/recaptcha/api.js?render='6Lc-DcopAAAAAAHuUCuML8O8pAiVl-d2U4O6UKC1'&onload=recaptchaCallback_form_captcha" async defer></script>
 		{% endblock %}
