pagiantion page blog added

--- a/templates/WelcomeBase.html.twig
+++ b/templates/WelcomeBase.html.twig
@@ -238,12 +238,12 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li class="nav-item">
-									<a href="categories.html" class="nav-link">
+									<a href="{{ path('app_login') }}" class="nav-link">
 										Ajouter
 									</a>
 								</li>
 								<li class="nav-item">
-									<a href="tags.html" class="nav-link">
+									<a href="{{ path('app_login') }}" class="nav-link">
 										Modifier
 									</a>
 								</li>
