--- a/templates/article/blog_grid.html.twig
+++ b/templates/article/blog_grid.html.twig
@@ -15,6 +15,9 @@
 							{% endfor %}
 						</div>
 					</div>
+					<div class="navigation">
+						{{ knp_pagination_render(articles) }}
+					</div>
 				</div>
 				<div class="col-lg-4">
 					<div class="side-bar-area pl-20">
