--- a/templates/defis_controller_user/_form.html.twig
+++ b/templates/defis_controller_user/_form.html.twig
@@ -29,6 +29,14 @@
                     </div>
 
                     {{ form_end(form) }}
+                    {% for message in app.flashes('success') %}
+				<div style="color: green;
+																			                                    border: 2px green solid;
+																			                                    text-align: center;
+																			                                    padding: 5px;margin-bottom: 10px;">
+					{{ message }}
+				</div>
+			{% endfor %}
                 </div>
             </div>
         </div>
