--- a/templates/participant_controller_user/index.html.twig
+++ b/templates/participant_controller_user/index.html.twig
@@ -18,11 +18,11 @@
                
                     <p class="card-text">Vote: {{ participant.vote }}</p>
                 <form method="post" action="{{ path('app_participant_vote', {'idpart': participant.idpart}) }}">
-                    <input type="hidden" name="vote" value="1"> 
-                    <button type="submit" class="btn btn-primary">Vote</button>
+                    <input type="hidden" name="vote" value="{{ participant.vote }}"> 
+                    <button type="submit" class="btn btn-primary" style="background-color: #72ae44; color: white; border-color: #72ae44; border-radius: 30px; width: 150px;">Vote</button>
                 </form>
                   
-                    </br> </br>
+                    </br> 
                                 {{ include('participant_controller_user/_delete_form.html.twig' ) }}
                 </div>
             </div>
